[gd_scene load_steps=32 format=3 uid="uid://chuwiaogvuibx"]

[ext_resource type="Texture2D" uid="uid://c8pumrndo3u1b" path="res://assets/backgrounds/paper_bg.jpg" id="1_cusv3"]
[ext_resource type="Script" uid="uid://dq6ta158kp0ay" path="res://scripts/minigames_eye_track.gd" id="1_u5qg0"]
[ext_resource type="FontFile" uid="uid://b6rxc2cd3gq82" path="res://assets/fonts/Indie_Flower/IndieFlower-Regular.ttf" id="2_u5qg0"]
[ext_resource type="FontFile" uid="uid://dmwtstgnkr0oc" path="res://assets/fonts/Anton/Anton-Regular.ttf" id="4_kgfdp"]
[ext_resource type="Texture2D" uid="uid://ivpscjmkosnj" path="res://icons/buttons/settings.png" id="4_onpga"]
[ext_resource type="Script" uid="uid://bnaqpofnsnbg0" path="res://scripts/impostazioni.gd" id="5_onpga"]
[ext_resource type="StyleBox" uid="uid://bvaywvbkfe4rj" path="res://assets/styles/hoverButtons.tres" id="7_ft4vf"]
[ext_resource type="Texture2D" uid="uid://ds186uo7s2om3" path="res://icons/buttons/box_not_checked.png" id="8_38vst"]
[ext_resource type="Texture2D" uid="uid://c6gdl5iv5pqms" path="res://icons/buttons/check.png" id="9_ft4vf"]
[ext_resource type="Texture2D" uid="uid://brvkr7k82xltp" path="res://icons/speech_bubble.png" id="12_38vst"]
[ext_resource type="Script" uid="uid://bk10uffv0x3da" path="res://scripts/npcMinigames.gd" id="12_ul30a"]
[ext_resource type="Texture2D" uid="uid://bi62iidwpbxsk" path="res://icons/buttons/completedButton.png" id="13_onpga"]
[ext_resource type="StyleBox" uid="uid://c2at70f554xs7" path="res://assets/styles/eyeGameEyes.tres" id="14_65phu"]
[ext_resource type="StyleBox" uid="uid://calhlokhj8v26" path="res://assets/styles/eyeGamesSelected.tres" id="15_4xxjb"]
[ext_resource type="Texture2D" uid="uid://cfa5fw1v4lx1f" path="res://assets/sprites/eyeMinigame/arrabbiato.jpg" id="15_qnoa5"]
[ext_resource type="ButtonGroup" uid="uid://th220pwxnr0f" path="res://assets/buttongroup/eyes.tres" id="16_0fi1v"]
[ext_resource type="StyleBox" uid="uid://shtqua81hai6" path="res://assets/styles/eyeGameCheck.tres" id="16_0hko8"]
[ext_resource type="StyleBox" uid="uid://cjsaal7fpb7js" path="res://assets/styles/eyeGameDisabled.tres" id="16_3sawx"]
[ext_resource type="Texture2D" uid="uid://dceyacmn42ud7" path="res://assets/sprites/eyeMinigame/triste.jpg" id="16_4xxjb"]
[ext_resource type="Texture2D" uid="uid://bk11khogpjj4v" path="res://assets/sprites/eyeMinigame/sorpreso.jpg" id="17_0fi1v"]
[ext_resource type="StyleBox" uid="uid://dc85ys8e776cx" path="res://assets/styles/eyeGameEmotion.tres" id="18_h54jj"]
[ext_resource type="ButtonGroup" uid="uid://l3krf2gol6n0" path="res://assets/buttongroup/emotions.tres" id="20_0fi1v"]
[ext_resource type="Texture2D" uid="uid://en2782805a2u" path="res://assets/sprites/NPC/Caterina.png" id="21_h54jj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qnoa5"]
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 200
corner_radius_top_right = 200
corner_radius_bottom_right = 200
corner_radius_bottom_left = 200

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4xxjb"]
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 200
corner_radius_top_right = 200
corner_radius_bottom_right = 200
corner_radius_bottom_left = 200

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0fi1v"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 200
corner_radius_top_right = 200
corner_radius_bottom_right = 200
corner_radius_bottom_left = 200

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0hko8"]
bg_color = Color(1, 0.921569, 0.803922, 0.941176)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3sawx"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h54jj"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ul30a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h54jj"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 90
corner_radius_top_right = 90
corner_radius_bottom_right = 90
corner_radius_bottom_left = 90

[node name="Node2D" type="Node2D"]

[node name="minigames_eyeTrack" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u5qg0")
eyes = ExtResource("16_0fi1v")
emotions = ExtResource("20_0fi1v")

[node name="Background" type="TextureRect" parent="minigames_eyeTrack"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_cusv3")
expand_mode = 1

[node name="Title" type="RichTextLabel" parent="minigames_eyeTrack"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -0.5
offset_top = 50.0
offset_right = 0.5
offset_bottom = 295.0
grow_horizontal = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_u5qg0")
theme_override_font_sizes/normal_font_size = 165
text = "Minigame EyeTrack"
scroll_active = false
horizontal_alignment = 1

[node name="impostazioni" type="Button" parent="minigames_eyeTrack"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -95.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 95.0
grow_horizontal = 0
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_u5qg0")
theme_override_font_sizes/font_size = 84
theme_override_styles/hover = SubResource("StyleBoxFlat_qnoa5")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4xxjb")
theme_override_styles/normal = SubResource("StyleBoxFlat_0fi1v")
icon = ExtResource("4_onpga")
icon_alignment = 1
expand_icon = true

[node name="Ritorna Indietro" type="Button" parent="minigames_eyeTrack"]
layout_mode = 1
offset_left = -62.0
offset_top = 100.0
offset_right = 38.0
offset_bottom = 298.0
rotation = -1.5708
focus_mode = 0
theme_override_colors/font_hover_color = Color(0.6, 0.6, 0.6, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 14
theme_override_constants/h_separation = 7
theme_override_constants/icon_max_width = 510
theme_override_constants/align_to_largest_stylebox = 32
theme_override_constants/line_spacing = 7
theme_override_fonts/font = ExtResource("4_kgfdp")
theme_override_font_sizes/font_size = 125
text = "â¤´"
flat = true
text_overrun_behavior = 2
icon_alignment = 1
expand_icon = true

[node name="Impostazioni" type="Popup" parent="minigames_eyeTrack"]
auto_translate_mode = 1
transparent_bg = true
size = Vector2i(1920, 1080)
wrap_controls = false
transparent = true
script = ExtResource("5_onpga")

[node name="SfondoTrasparent" type="Panel" parent="minigames_eyeTrack/Impostazioni"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BoxImpostazioni" type="Panel" parent="minigames_eyeTrack/Impostazioni/SfondoTrasparent"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 660.0
offset_top = 120.0
offset_right = -660.0
offset_bottom = -160.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0hko8")

[node name="VBoxContainer" type="VBoxContainer" parent="minigames_eyeTrack/Impostazioni/SfondoTrasparent/BoxImpostazioni"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="VolumeP" type="Panel" parent="minigames_eyeTrack/Impostazioni/SfondoTrasparent/BoxImpostazioni/VBoxContainer"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_3sawx")

[node name="RichTextLabel" type="RichTextLabel" parent="minigames_eyeTrack/Impostazioni/SfondoTrasparent/BoxImpostazioni/VBoxContainer/VolumeP"]
custom_minimum_size = Vector2(600, 100)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 14.0
offset_bottom = 114.0
grow_horizontal = 2
theme_override_colors/selection_color = Color(0.962296, 0.733232, 1, 1)
theme_override_constants/table_v_separation = 4
theme_override_constants/text_highlight_h_padding = 6
theme_override_constants/outline_size = 13
theme_override_constants/shadow_offset_y = 8
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_outline_size = 14
theme_override_constants/line_separation = 5
theme_override_fonts/normal_font = ExtResource("2_u5qg0")
theme_override_font_sizes/bold_italics_font_size = 1
theme_override_font_sizes/italics_font_size = 1
theme_override_font_sizes/mono_font_size = 1
theme_override_font_sizes/normal_font_size = 70
theme_override_font_sizes/bold_font_size = 1
text = "VOLUME"
scroll_active = false
tab_size = 1
horizontal_alignment = 1
justification_flags = 128
visible_characters_behavior = 2

[node name="volume" type="HSlider" parent="minigames_eyeTrack/Impostazioni/SfondoTrasparent/BoxImpostazioni/VBoxContainer/VolumeP"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = 4.0
offset_right = 200.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
ticks_on_borders = true

[node name="VideoP" type="Panel" parent="minigames_eyeTrack/Impostazioni/SfondoTrasparent/BoxImpostazioni/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_h54jj")

[node name="RichTextLabel2" type="RichTextLabel" parent="minigames_eyeTrack/Impostazioni/SfondoTrasparent/BoxImpostazioni/VBoxContainer/VideoP"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 1.0
offset_top = 97.0
offset_right = 1.0
offset_bottom = 197.0
grow_horizontal = 2
theme_override_colors/selection_color = Color(0.962296, 0.733232, 1, 1)
theme_override_constants/table_v_separation = 4
theme_override_constants/text_highlight_h_padding = 6
theme_override_constants/outline_size = 13
theme_override_constants/shadow_offset_y = 8
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_outline_size = 14
theme_override_constants/line_separation = 5
theme_override_fonts/normal_font = ExtResource("2_u5qg0")
theme_override_font_sizes/bold_italics_font_size = 1
theme_override_font_sizes/italics_font_size = 1
theme_override_font_sizes/mono_font_size = 1
theme_override_font_sizes/normal_font_size = 70
theme_override_font_sizes/bold_font_size = 1
text = "SCHERMO"
scroll_active = false
tab_size = 1
justification_flags = 128
visible_characters_behavior = 2

[node name="OptionButton" type="OptionButton" parent="minigames_eyeTrack/Impostazioni/SfondoTrasparent/BoxImpostazioni/VBoxContainer/VideoP"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -32.0
offset_right = 290.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 13
theme_override_fonts/font = ExtResource("2_u5qg0")
theme_override_font_sizes/font_size = 50

[node name="FullScreen" type="Button" parent="minigames_eyeTrack/Impostazioni/SfondoTrasparent/BoxImpostazioni/VBoxContainer/VideoP"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -84.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 0
focus_mode = 0
theme_override_constants/outline_size = 13
theme_override_constants/h_separation = 8
theme_override_constants/icon_max_width = 5000
theme_override_constants/align_to_largest_stylebox = 2
theme_override_constants/line_spacing = -2
theme_override_fonts/font = ExtResource("2_u5qg0")
theme_override_font_sizes/font_size = 60
theme_override_styles/hover = ExtResource("7_ft4vf")
theme_override_styles/pressed = ExtResource("7_ft4vf")
toggle_mode = true
action_mode = 0
text = "SCHERMO INTERO"
icon = ExtResource("8_38vst")
flat = true

[node name="CheckFS" type="TextureRect" parent="minigames_eyeTrack/Impostazioni/SfondoTrasparent/BoxImpostazioni/VBoxContainer/VideoP/FullScreen"]
visible = false
layout_mode = 0
offset_left = -2.0
offset_top = -5.0
offset_right = 93.0
offset_bottom = 82.0
texture = ExtResource("9_ft4vf")
expand_mode = 1

[node name="Ritorna Indietro" type="Button" parent="minigames_eyeTrack/Impostazioni/SfondoTrasparent/BoxImpostazioni"]
layout_mode = 0
offset_left = -36.0
offset_top = 88.0
offset_right = 52.0
offset_bottom = 243.0
rotation = -1.5708
focus_mode = 0
theme_override_constants/outline_size = 14
theme_override_constants/h_separation = 7
theme_override_constants/icon_max_width = 510
theme_override_constants/align_to_largest_stylebox = 32
theme_override_constants/line_spacing = 7
theme_override_fonts/font = ExtResource("2_u5qg0")
theme_override_font_sizes/font_size = 100
text = "â¤´"
icon = SubResource("CompressedTexture2D_ul30a")
flat = true
text_overrun_behavior = 2
icon_alignment = 1
expand_icon = true

[node name="Gioco" type="HBoxContainer" parent="minigames_eyeTrack"]
custom_minimum_size = Vector2(1700, 700)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -850.0
offset_top = -272.0
offset_right = 850.0
offset_bottom = 433.0
grow_horizontal = 2
grow_vertical = 2

[node name="Occhi" type="VBoxContainer" parent="minigames_eyeTrack/Gioco"]
custom_minimum_size = Vector2(850, 0)
layout_mode = 2

[node name="Spazio0" type="TextureRect" parent="minigames_eyeTrack/Gioco/Occhi"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
metadata/lv = 0

[node name="occhio1" type="Button" parent="minigames_eyeTrack/Gioco/Occhi"]
custom_minimum_size = Vector2(600, 200)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_u5qg0")
theme_override_font_sizes/font_size = 50
theme_override_styles/disabled = ExtResource("16_3sawx")
theme_override_styles/hover_pressed = ExtResource("16_0hko8")
theme_override_styles/hover = ExtResource("18_h54jj")
theme_override_styles/pressed = ExtResource("15_4xxjb")
theme_override_styles/normal = ExtResource("14_65phu")
toggle_mode = true
button_group = ExtResource("16_0fi1v")
icon = ExtResource("15_qnoa5")
icon_alignment = 1
metadata/lv = 0
metadata/done = false
metadata/emotion = ""

[node name="Spazio1" type="TextureRect" parent="minigames_eyeTrack/Gioco/Occhi"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
metadata/lv = 0

[node name="occhio2" type="Button" parent="minigames_eyeTrack/Gioco/Occhi"]
custom_minimum_size = Vector2(600, 200)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_u5qg0")
theme_override_font_sizes/font_size = 50
theme_override_styles/disabled = ExtResource("16_3sawx")
theme_override_styles/hover_pressed = ExtResource("16_0hko8")
theme_override_styles/hover = ExtResource("18_h54jj")
theme_override_styles/pressed = ExtResource("15_4xxjb")
theme_override_styles/normal = ExtResource("14_65phu")
toggle_mode = true
button_group = ExtResource("16_0fi1v")
icon = ExtResource("16_4xxjb")
icon_alignment = 1
metadata/lv = 0
metadata/done = false
metadata/emotion = ""

[node name="Spazio2" type="TextureRect" parent="minigames_eyeTrack/Gioco/Occhi"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
metadata/lv = 0

[node name="occhio3" type="Button" parent="minigames_eyeTrack/Gioco/Occhi"]
custom_minimum_size = Vector2(600, 200)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_u5qg0")
theme_override_font_sizes/font_size = 50
theme_override_styles/disabled = ExtResource("16_3sawx")
theme_override_styles/hover_pressed = ExtResource("16_0hko8")
theme_override_styles/hover = ExtResource("18_h54jj")
theme_override_styles/pressed = ExtResource("15_4xxjb")
theme_override_styles/normal = ExtResource("14_65phu")
toggle_mode = true
button_group = ExtResource("16_0fi1v")
icon = ExtResource("17_0fi1v")
icon_alignment = 1
metadata/lv = 0
metadata/done = false
metadata/emotion = ""

[node name="Emozioni" type="VBoxContainer" parent="minigames_eyeTrack/Gioco"]
custom_minimum_size = Vector2(850, 0)
layout_mode = 2

[node name="Spazio0" type="TextureRect" parent="minigames_eyeTrack/Gioco/Emozioni"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
metadata/lv = 0

[node name="emozione1" type="Button" parent="minigames_eyeTrack/Gioco/Emozioni"]
custom_minimum_size = Vector2(600, 200)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_u5qg0")
theme_override_font_sizes/font_size = 70
theme_override_styles/disabled = ExtResource("16_3sawx")
theme_override_styles/hover = ExtResource("14_65phu")
theme_override_styles/pressed = ExtResource("15_4xxjb")
theme_override_styles/normal = SubResource("StyleBoxFlat_h54jj")
toggle_mode = true
button_group = ExtResource("20_0fi1v")
text = "RABBIA"
icon_alignment = 1
metadata/lv = 0
metadata/done = false

[node name="Spazio1" type="TextureRect" parent="minigames_eyeTrack/Gioco/Emozioni"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
metadata/lv = 0

[node name="emzione2" type="Button" parent="minigames_eyeTrack/Gioco/Emozioni"]
custom_minimum_size = Vector2(600, 200)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_u5qg0")
theme_override_font_sizes/font_size = 70
theme_override_styles/disabled = ExtResource("16_3sawx")
theme_override_styles/hover = ExtResource("14_65phu")
theme_override_styles/pressed = ExtResource("15_4xxjb")
theme_override_styles/normal = SubResource("StyleBoxFlat_h54jj")
toggle_mode = true
button_group = ExtResource("20_0fi1v")
text = "SORPRESO"
icon_alignment = 1
metadata/lv = 0
metadata/done = false

[node name="Spazio2" type="TextureRect" parent="minigames_eyeTrack/Gioco/Emozioni"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
metadata/lv = 0

[node name="emozione3" type="Button" parent="minigames_eyeTrack/Gioco/Emozioni"]
custom_minimum_size = Vector2(600, 200)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_u5qg0")
theme_override_font_sizes/font_size = 70
theme_override_styles/disabled = ExtResource("16_3sawx")
theme_override_styles/hover = ExtResource("14_65phu")
theme_override_styles/pressed = ExtResource("15_4xxjb")
theme_override_styles/normal = SubResource("StyleBoxFlat_h54jj")
toggle_mode = true
button_group = ExtResource("20_0fi1v")
text = "TRISTE"
icon_alignment = 1
metadata/lv = 0
metadata/done = false

[node name="Npc" type="Panel" parent="minigames_eyeTrack"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("12_ul30a")

[node name="SfondoTrasparent" type="Panel" parent="minigames_eyeTrack/Npc"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Personaggio" type="TextureRect" parent="minigames_eyeTrack/Npc/SfondoTrasparent"]
layout_mode = 0
offset_left = 100.0
offset_top = 1.0
offset_right = 583.0
offset_bottom = 1081.0
texture = ExtResource("21_h54jj")
stretch_mode = 5

[node name="Speech Bubble Output" type="TextureRect" parent="minigames_eyeTrack/Npc/SfondoTrasparent"]
layout_mode = 0
offset_left = 539.0
offset_top = 39.0
offset_right = 1233.0
offset_bottom = 465.0
texture = ExtResource("12_38vst")
expand_mode = 1

[node name="Speech" type="RichTextLabel" parent="minigames_eyeTrack/Npc/SfondoTrasparent/Speech Bubble Output"]
layout_mode = 0
offset_left = 37.0
offset_top = 37.0
offset_right = 656.0
offset_bottom = 332.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_constants/line_separation = -5
theme_override_fonts/normal_font = ExtResource("2_u5qg0")
theme_override_font_sizes/normal_font_size = 45
text = "giao
fiao"
scroll_following = true

[node name="Completed" type="Button" parent="minigames_eyeTrack/Npc/SfondoTrasparent"]
visible = false
layout_mode = 0
offset_left = 1278.0
offset_top = 609.0
offset_right = 1668.0
offset_bottom = 958.0
focus_mode = 0
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
icon = ExtResource("13_onpga")
flat = true
icon_alignment = 1
expand_icon = true

[connection signal="pressed" from="minigames_eyeTrack/impostazioni" to="minigames_eyeTrack" method="_on_impostazioni_pressed"]
[connection signal="pressed" from="minigames_eyeTrack/Ritorna Indietro" to="minigames_eyeTrack" method="_on_ritorna_indietro_pressed"]
[connection signal="item_selected" from="minigames_eyeTrack/Impostazioni/SfondoTrasparent/BoxImpostazioni/VBoxContainer/VideoP/OptionButton" to="minigames_eyeTrack/Impostazioni" method="_on_option_button_item_selected"]
[connection signal="toggled" from="minigames_eyeTrack/Impostazioni/SfondoTrasparent/BoxImpostazioni/VBoxContainer/VideoP/FullScreen" to="minigames_eyeTrack/Impostazioni" method="_on_full_screen_toggled"]
[connection signal="pressed" from="minigames_eyeTrack/Impostazioni/SfondoTrasparent/BoxImpostazioni/Ritorna Indietro" to="minigames_eyeTrack/Impostazioni" method="_on_ritorna_indietro_pressed"]
[connection signal="visibility_changed" from="minigames_eyeTrack/Npc" to="minigames_eyeTrack/Npc" method="_on_visibility_changed"]
[connection signal="pressed" from="minigames_eyeTrack/Npc/SfondoTrasparent/Completed" to="minigames_eyeTrack/Npc" method="_on_completed_pressed"]
